syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.gustavoflor.grpc.protobuf";

message BalanceCheckRequest {
  int64 account_number = 1;
}

message Balance {
  double value = 1;
  Currency currency = 2;
}

enum Currency {
  USD = 0;
  BRL = 1;
}

message WithdrawRequest {
  int64 account_number = 1;
  int64 amount = 2;
}

message Money {
  double value = 1;
}

message DepositRequest {
  int64 account_number = 1;
  double amount = 2;
}

enum ErrorStatus {
  UNKNOWN = 0;
  INSUFFICIENT_BALANCE = 1;
  ONLY_TEN_MULTIPLES = 2;
  AMOUNT_SHOULD_BE_POSITIVE = 3;
}

message WithdrawError {
  ErrorStatus status = 1;
  Balance balance = 2;
}

service BankService {

  // Unary
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  // Server-side streaming
  rpc withdraw(WithdrawRequest) returns (stream Money);

  // Client-side streaming
  rpc deposit(stream DepositRequest) returns (Balance);

}
